test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_specification_binary_expression.sol
contract C layout at 0xffff * (0x123 + 0xABC) { }
// ----
// UnimplementedFeatureError 1834: (0-49): Code generation is not supported for contracts with specified storage layout base.
